--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -268,6 +268,20 @@ components:
     required: true
   - name: dubbd-pre-upgrade
     required: true
+    actions:
+      onDeploy:
+        after:
+          - cmd: |
+              if [ "${ZARF_VAR_IS_UPGRADE}" = "true" ]; then
+                ./zarf tools kubectl apply -f neuvector-controller-pa.yaml
+              fi
+              rm neuvector-controller-pa.yaml
+            mute: true
+            description: "Add PeerAuthentication for NeuVector Controller on upgrade"
+    files:
+      - source: manifests/neuvector-controller-pa.yaml
+        target: neuvector-controller-pa.yaml
+
   - name: bigbang
     required: true
     actions:
