fix: loki config to address memberlist issue

--- a/values/loki.yaml
+++ b/values/loki.yaml
@@ -1,6 +1,12 @@
 loki:
   strategy: "monolith"
   values:
+    # Values for both Monolith & Scalable strategy
+    loki:
+      ingester:
+        autoforget_unhealthy: true
+      extraMemberlistConfig:
+        rejoin_interval: 120s
     # Values for Monolith strategy
     singleBinary:
       persistence:
