fix: remove kyverno exception ns boundary

--- a/values/kyverno.yaml
+++ b/values/kyverno.yaml
@@ -3,6 +3,7 @@ kyverno:
     features:
       policyExceptions:
         enabled: true
+        namespace: null
     admissionController:
       replicas: 3
       container:
