--- a/.github/workflows/test-k3d-package.yaml
+++ b/.github/workflows/test-k3d-package.yaml
@@ -9,7 +9,7 @@ permissions:
 
 jobs:
   test-clean-install:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-big-boy-8-core
 
     steps:
       - name: Free GH runner space
@@ -32,18 +32,6 @@ jobs:
           working-dir: k3d
           download-init-package: true
           timeout-minutes: 60
-
-      - name: Create k3d cluster
-        id: create-cluster
-        # renovate: datasource=github-tags depName=defenseunicorns/uds-aws-ci-k3d versioning=semver
-        uses: defenseunicorns/uds-aws-ci-k3d@v0.0.3
-        with:
-          cluster-action: create
-          aws-assume-role: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASSUME }}
-          aws-region: us-west-2
-
-      - name: Zarf init
-        run: zarf init -a amd64 --components=git-server --confirm
 
       - name: Deploy DUBBD on k3d cluster
         run: zarf package deploy zarf-package-*.tar.zst --confirm
