--- a/.github/workflows/terraform-lint/ci-on-pull-request-infra-aws.yaml
+++ b/.github/workflows/terraform-lint/ci-on-pull-request-infra-aws.yaml
@@ -7,9 +7,9 @@ on:
   push:
     branches:
       - testing-infra-lint
-    paths:
-      - ".github/test-infra/ci-dubbd-iac-aws/**"
-      - ".github/workflows/terraform-lint/**"
+    # paths:
+    #   - ".github/test-infra/ci-dubbd-iac-aws/**"
+    #   - ".github/workflows/terraform-lint/**"
 
   # inputs:
   #     github-token:
