--- a/.github/workflows/ci-on-pull-request-infra-aws.yaml
+++ b/.github/workflows/ci-on-pull-request-infra-aws.yaml
@@ -39,15 +39,15 @@ jobs:
 
       - name: Terraform init
         run: terraform init
-        working-directory: ".github/test-infra/ci-dubbd-iac-aws/**"
+        working-directory: ".github/test-infra/ci-dubbd-iac-aws/"
 
       - name: terraform validate
         run: terraform validate
-        working-directory: ".github/test-infra/ci-dubbd-iac-aws/**"
+        working-directory: ".github/test-infra/ci-dubbd-iac-aws/"
 
       - name: terraform fmt
         run: terraform fmt -recursive
-        working-directory: ".github/test-infra/ci-dubbd-iac-aws/**"
+        working-directory: ".github/test-infra/ci-dubbd-iac-aws/"
 
       - name: Init TFLint
         run: tflint --init
