--- a/.github/workflows/ci-on-pull-request-infra.yaml
+++ b/.github/workflows/ci-on-pull-request-infra.yaml
@@ -29,7 +29,7 @@ jobs:
         id: path-filter
         uses: dorny/paths-filter@v2
         with:
-          filters: .github/workflows/terraform-lint/filters.yaml
+          filters: .github/workflows/terraform-lint/filters.yml
 
   # run-capability-test:
   #   needs: check-paths
