--- a/.github/workflows/ci-on-pull-request-infra.yaml
+++ b/.github/workflows/ci-on-pull-request-infra.yaml
@@ -18,39 +18,28 @@ jobs:
     runs-on: ubuntu-latest
     name: Select Jobs
     outputs:
-      capabilities: ${{ steps.path-filter.outputs.changes }}
+      paths: ${{ steps.path-filter.outputs.changes }}
 
     steps:
       - name: Checkout the code
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
       # Uses a custom action to filter paths for capabilities.
-      - name: Check capability paths
+      - name: Check paths
         id: path-filter
         uses: dorny/paths-filter@v2
         with:
           filters: .github/workflows/terraform-lint/filters.yml
-
-  # run-capability-test:
-  #   needs: check-paths
-  #   name: Schedule
-  #   strategy:
-  #     matrix:
-  #       capability: ${{ fromJSON(needs.check-paths.outputs.capabilities) }}
-  #   uses: ./.github/workflows/terraform-lint/terraform-lint.yaml
-  #   with:
-  #     capability: ${{ matrix.capability }}
-  #   secrets: inherit # Inherits all secrets from the parent workflow.
 
   tflint:
     needs: check-paths
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        capability: ${{ fromJSON(needs.check-paths.outputs.capabilities) }}
+        path: ${{ fromJSON(needs.check-paths.outputs.paths) }}
     defaults:
       run:
-        working-directory: ${{ matrix.capability }}
+        working-directory: ${{ matrix.path }}
     steps:
       - name: Clone repo
         uses: actions/checkout@v3
@@ -89,6 +78,9 @@ jobs:
   regula:
     needs: [tflint, check-paths]
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        path: ${{ fromJSON(needs.check-paths.outputs.paths) }}
     steps:
       - name: Clone repo
         uses: actions/checkout@v3
@@ -99,6 +91,6 @@ jobs:
       - name: Scan with Regula
         uses: fugue/regula-action@v3.2.1
         with:
-          input_path: ${{ fromJSON(needs.check-paths.outputs.capabilities) }}
+          input_path: ${{ matrix.path }}
           input_type: tf
           severity: high
