--- a/.github/workflows/terraform-lint/filters.yml
+++ b/.github/workflows/terraform-lint/filters.yml
@@ -1,6 +1,6 @@
-loki:
+ci-dubbd-iac-aws/loki:
   - ".github/test-infra/ci-dubbd-iac-aws/loki/**"
-valero:
+ci-dubbd-iac-aws/valero:
   - ".github/test-infra/ci-dubbd-iac-aws/valero/**"
 rke2:
   - ".github/test-infra/rke2/**"
