--- a/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
+++ b/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
@@ -18,6 +18,7 @@ on:
       - "**/oscal-component.y*ml"
       - ".github/workflows/*k3d*.y*ml"
       - ".github/workflows/*rke2*.y*ml"
+      - ".github/workflows/*infra*.y*ml"
       - ".github/workflows/oscal/*oscal-component.y*ml"
 
   workflow_call:
