--- a/.github/workflows/ci-on-pull-request-infra.yaml
+++ b/.github/workflows/ci-on-pull-request-infra.yaml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Terraform init
-        run: terraform init
+        run: terraform init -reconfigure -backend=false
 
       - name: terraform validate
         run: terraform validate
