--- a/.github/workflows/ci-on-pull-request-infra.yaml
+++ b/.github/workflows/ci-on-pull-request-infra.yaml
@@ -29,7 +29,7 @@ jobs:
         id: path-filter
         uses: dorny/paths-filter@v2
         with:
-          filters: .github/workflows/filters.yml
+          filters: .github/filters.yml
   scan-tf:
     needs: check-paths
     name: scan
