--- a/.github/workflows/test-dubbd-aws-install.yaml
+++ b/.github/workflows/test-dubbd-aws-install.yaml
@@ -32,6 +32,11 @@ jobs:
           role-session-name: ${{ github.job || github.event.client_payload.pull_request.head.sha || github.sha }}
           aws-region: us-west-2
           role-duration-seconds: 21600
+      
+      - name: Set Terraform version
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: "1.4.2"
 
       - uses: ./.github/actions/create-zarf-package
         name: Create CI-DUBBD-IAC-AWS Zarf package
