fix: add values for velero to not use secret

--- a/aws/values/aws-velero.yaml
+++ b/aws/values/aws-velero.yaml
@@ -16,6 +16,8 @@ addons:
             provider: aws
             config:
               region: "###ZARF_VAR_VELERO_S3_AWS_REGION###"
+      credentials:
+        useSecret: false
       schedules:
         udsbackup:
           disabled: false
