wip: fix velero typo; change tf version to 1.5.7

--- a/.github/filters.yml
+++ b/.github/filters.yml
@@ -1,6 +1,6 @@
 ci-dubbd-iac-aws/loki:
   - ".github/test-infra/ci-dubbd-iac-aws/loki/**"
-ci-dubbd-iac-aws/valero:
-  - ".github/test-infra/ci-dubbd-iac-aws/valero/**"
+ci-dubbd-iac-aws/velero:
+  - ".github/test-infra/ci-dubbd-iac-aws/velero/**"
 rke2:
   - ".github/test-infra/rke2/**"
