ci: infra lint (#623)
* chore: adding TF linting for TF in CI

* wip: adding work dir to target test infra tf files

* wip: scoping down tf lint workflow

* wip

* wip

* wip

* wip: trying to filter to get path to give tf lint

* wip

* wip

* wip: tryign to trigger

* wip: testing

* wip: merging tf lint workflow files into 1 workflow

* wip: fixed typo

* wip: trigger

* wip: expanding filters to look for any file in given dirs

* wip: adding check-path as dep to workflow jobs

* wip: work dir

* wip: fixing invalid template

* wip: updating filters.yml for better path matching

* wip

* wip: ignoring infra ci changes for ci-on-pull aws, k3d, rke2

* wip: setting tf init backend to false for CI

* wip: install tflint

* wip: fixed tflint warnings in test infra

* wip: fix tf init unsupported version error

* wip: setting up specific tf version in ci

* wip: fix regula dir path

* wip: setting work dir for tfsec-scan

* wip: extracting tflint from main workflow into sub workflow yaml

* wip: moving terraform-lint/* directly into /workflows

* wip: testing dif uses path for scan-tf

* wip

* wip

* wip

* wip

* wip:

* wip

* wip: fix yamllint errors.

* wip: set tf version for dubbd-aws and rke2 ci to 1.4.2

* wip: fix yamllint

* wip: setting tf version in aws-upgrade workflow

* wip: fix velero typo; change tf version to 1.5.7

* wip: removed commented tf variables

--- a/.github/workflows/test-dubbd-aws-upgrade.yaml
+++ b/.github/workflows/test-dubbd-aws-upgrade.yaml
@@ -41,6 +41,11 @@ jobs:
           aws-region: us-west-2
           role-duration-seconds: 21600
 
+      - name: Set Terraform version
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: "1.5.7"
+
       - uses: ./.github/actions/create-zarf-package
         name: Create CI-DUBBD-IAC-AWS Zarf package
         with:
